Fix visible bookshelf tag in VE
ERM32068

[4.x]

--- a/resources/bluespice.bookshelf.css
+++ b/resources/bluespice.bookshelf.css
@@ -23,3 +23,12 @@
 .ve-ce-focusableNode.bs-bookshelf-toc {
 	display: none;
 }
+
+/**
+ * Fix to hide tag in VE mode due to change in VE and mediawiki core this is now visible
+ * https://phabricator.wikimedia.org/T295984
+ * have to use !important due to VE sets inline style to display block
+ */
+.mw-empty-elt[typeof="mw:Extension/bookshelf"] {
+	display: none !important;
+}
